--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.21.0",
+    "@react-navigation/native-stack": "^6.9.24",
     "expo": "~50.0.11",
+    "expo-checkbox": "~2.7.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-sqlite": "~13.3.0",
     "expo-status-bar": "~1.11.1",
+    "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-mask-text": "^0.14.2",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
